[gd_scene load_steps=13 format=2]

[ext_resource path="res://EnvInteractions/SpawnerTimer.gd" type="Script" id=1]
[ext_resource path="res://EnvInteractions/assets/Green Portal Sprite Sheet.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=10]
radius = 883.263

[node name="AnimatedSprite" type="AnimatedSprite"]
modulate = Color( 1, 1, 1, 0.647059 )
position = Vector2( -8, -4 )
frames = SubResource( 9 )
frame = 5
playing = true

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 5.0
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 10 )

[connection signal="timeout" from="Timer" to="Timer" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="Timer" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="Timer" method="_on_Area2D_body_exited"]
